Overflow not fixed
for 480 >

--- a/css/main.css
+++ b/css/main.css
@@ -1284,14 +1284,14 @@ body {
   line-height: 1.56;
   color: var(--primary-white-color);
   background-color: rgba(33, 150, 243, 0.9);
-  transition: transform var(--duration) var(--speed), opacity var(--duration) var(--speed);
+  transition: transform var(--duration) var(--speed), opacity var(--duration) var(--speed), visibility var(--duration) var(--speed);
 }
 
 .products__link:hover .products__overlay,
 .products__link:focus .products__overlay {
   transform: translateY(0%);
-  transition: transform var(--duration) var(--speed), opacity var(--duration) var(--speed);
   opacity: 1;
+  transition: transform var(--duration) var(--speed), opacity var(--duration) var(--speed), visibility var(--duration) var(--speed);
 }
 
 .products__link {
@@ -1320,5 +1320,14 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.87;
+}
+
+@media screen and (max-width: 479px) {
+  .products__overlay {
+    padding: 15% 5%;
+    font-size: 16px;
+    font-weight: 400;
+    overflow: auto;
+  }
 }
 /*# sourceMappingURL=main.css.map */
